Fixed in use sizing on mobile

--- a/css/logo-nav.css
+++ b/css/logo-nav.css
@@ -345,17 +345,27 @@ body {
     text-align: center;
 }
 
+.companies {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+}
+
 .companies li {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     display: inline-block;
-    padding: 2%;
+    padding: 3%;
     vertical-align: middle;
     width: 18%;
 }
 
-.companies .col img{
+.companies .col img {
     display: block;
     width: 100%;
     max-height: 60px;
@@ -834,6 +844,7 @@ body {
     }
     .companies li {
         width: 30%;
+        padding: 4%;
     }
     body {
         padding-top: 50px;
